Update listener in the DOM

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,11 @@ body {
   text-align: center;
   font-size: 2rem;
   outline: 2px solid white;
-  margin: 0;
   background: black;
   cursor: pointer;
+}
+
+.cell:hover{
+    background-color: rgb(1, 1, 1);
+    cursor: pointer;
 }
