--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,16 @@ body {
     background-color: rgb(1, 1, 1);
     cursor: pointer;
 }
+
+.startBtn{
+    justify-self: center;
+    display: grid;
+    margin-top: 30px;
+    height: 40px;
+    width: 100px;
+    align-content: center;
+    border-radius: 9px;
+    background-color: grey;
+    font-size: 14px;
+    font-weight: bold;
+}
